objects/FieloEE__ProgramLayout__c.object
<CustomObject>
    <description>Graphic layouts for your membersâ€™ portal.</description>
    <fields>
        <fullName>FieloEE__BackgroundAttribute__c</fullName>
        <label>Background attribute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No-repeat</fullName>
                    <default>true</default>
                    <label>No-repeat</label>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>Repeat-x</fullName>
                </value>
                <value>
                    <fullName>Repeat-y</fullName>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__BackgroundId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BackgroundId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__BodyBackgroundAttribute__c</fullName>
        <label>Body Background Attribute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No-repeat</fullName>
                    <default>true</default>
                    <label>No-repeat</label>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>Repeat-x</fullName>
                </value>
                <value>
                    <fullName>Repeat-y</fullName>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__BodyBackgroundId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Body Background Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__CSS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Color01__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Color01</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Color02__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Color02</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Color03__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Color03</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ColorFont01__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ColorFont01</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ColorFont02__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ColorFont02</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ColorFont03__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ColorFont03</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Font__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Font</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__FooterBackgroundAttribute__c</fullName>
        <label>Footer Background Attribute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No-repeat</fullName>
                    <default>true</default>
                    <label>No-repeat</label>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>Repeat-x</fullName>
                </value>
                <value>
                    <fullName>Repeat-y</fullName>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__FooterBackgroundId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Footer Background Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Footer__c</fullName>
        <label>Footer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>fixed</fullName>
                </value>
                <value>
                    <fullName>fullsize</fullName>
                </value>
                <value>
                    <fullName>pagesize</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__HTMLHeadLayout__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HTML head layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__HeaderBackgroundAttribute__c</fullName>
        <label>Header Background Attribute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No-repeat</fullName>
                    <default>true</default>
                    <label>No-repeat</label>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>Repeat-x</fullName>
                </value>
                <value>
                    <fullName>Repeat-y</fullName>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Header__c</fullName>
        <label>Header</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>fixed</fullName>
                </value>
                <value>
                    <fullName>fullsize</fullName>
                </value>
                <value>
                    <fullName>pagesize</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Home__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Program Layouts (Home)</relationshipLabel>
        <relationshipName>ProgramLayoutsOR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Logo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Logo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Menu__c</fullName>
        <label>Menu</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>pills</fullName>
                </value>
                <value>
                    <fullName>tabs</fullName>
                </value>
                <value>
                    <fullName>nav</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipName>ProgramPortals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__SearchRewardMenu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search Reward Menu</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Program Layouts</relationshipLabel>
        <relationshipName>ProgramLayouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
        <relationshipName>ProgramPortals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Target__c</fullName>
        <formula>IF( FieloEE__Default__c , &apos;Default&apos;, IF( ISBLANK(FieloEE__Segment__c) || ISNULL(FieloEE__Segment__c), &apos;Guest&apos;, FieloEE__Segment__r.Name ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__headerBackgroundId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>headerBackgroundId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Program Layout</label>
    <nameField>
        <displayFormat>PP-{0000000}</displayFormat>
        <label>Program Layout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Layout</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>